examples/kju/negative/type_inference/conflict.kju
fun kju() : Unit
{
    var a;
    a = true;
    a = 123;
}
